# dyploma

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py  schemas.py  services.py
app/static/: app.js  index.html  styles.css
tests/: test_main.py
